--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
         <h2 class="data-error__title">Не удалось загрузить данные</h2>
       </section>
     </template>
+    <p>Проверка рабочего процесса</p>
   <script src="js/main.js"></script>
 </body>
 </html>
